--- a/templates/overview.html
+++ b/templates/overview.html
@@ -189,7 +189,7 @@
 
   <body>
     <div class="container">
-      <h1>ðŸŒ½ Node Farm ðŸ¥¦</h1>
+      <h1>🌽 Node Farm 🥦</h1>
 
       <div class="cards-container">
         {%PRODUCT_CARDS%}
